omerocommon/css/question-player-base.css
/**
 * Copyright (c) 2015-2016, CRS4
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of
 * this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to
 * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
 * the Software, and to permit persons to whom the Software is furnished to do so,
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
 * FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
 * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

div[id*=question-container] {
    position: relative;
}

.image-viewer-with-controls-container {
    /* width: 650px; */
    background: transparent;
    border: 1px solid transparent;
}

.interactive-player-toolbar {
    margin: 5px 0;
    padding: 0;

}

.interactive-player-toolbar a {
    width: 100px;
    padding: 0;
    margin: 0;
}

.image_position_button {
    background: transparent;
    text-align: right;
}

div[id*=marker_removers_container] {
    display: block;
}

div.numpartscorrect{
    margin: 10px 15px 0;
}

span.yourmarkers-text {
    font-weight: bold;
}

span.focus-areas-text {
    font-weight: bold;
}

.remove_marker_button_group {
    padding: 0;
    height: auto;
}

.remove_marker_button_group div {
    margin: 0 0px;
}

div[id*=graphics_container] {
    margin-top: 30px;
    height: 500px;
}

div.qtext {
    margin-bottom: 50px;
}

div.question-summary {
    margin: 40px 0 0;
    min-height: 80px;
}

div.answer-summary-fixed-text {
    margin: 10px 0;
}

div[id*=remove_marker_ctrl] {
    display: inline-block;
    margin-right: 5px;
}

div[id*=hide_marker_ctrl] {
    margin-left: 5px;
}

.focus_areas_container {
    margin: 0px 0 0;
    padding: 20px 0 10px;
    display: block;
    position: relative;
}

div[id*=goto_marker_ctrl_id] {
    display: inline-block;
    margin-left: 10px;
}

div.multichoice-options-container {
    /*margin: 20px 10px 40px;*/
}

div.multichoice-options-container .prompt {
    margin-top: 25px;
    margin-bottom: 10px;
}

div.multichoice-options-container .answer {
    margin-bottom: 25px;
}

div.outcome {
    margin: 0 0 10px;
    padding: 20px 30px 20px;
}

div.content > div.outcome.clearfix {
    margin: 10px 25px;
}

div.rightanswer {
    margin: 0 0 10px;
    padding: 10px 15px 5px;
}

.content .formulation {
    padding: 8px 14px 8px 14px;
}

div.image-viewer-loading-dialog {
    background: rgba(255, 255, 255, 0.4) url("../../omerocommon/img/loading.gif") no-repeat center;
    position: absolute;
    width: 100%;
    height: 500px;
}

div.invalidator-panel {
    background: rgba(255, 0, 0, 0.4) url("../../omerocommon/img/crss.svg") no-repeat center;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: none;
    background-size: 100% 100%;
    opacity: 0.5;
}

